--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "svelte-preprocess": "^4.0.0",
     "tslib": "^2.0.0",
     "typescript": "^4.0.0",
-    "vite": "^2.2.3"
+    "vite": "^2.2.3",
+    "vite-plugin-windicss": "^0.15.7",
+    "windicss": "^2.5.14"
   },
   "type": "module"
 }
