--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
-    "@sveltejs/kit": "next",
+    "@sveltejs/adapter-netlify": "next",
+    "@sveltejs/kit": "^1.0.0-next.91",
     "prettier": "~2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
     "svelte": "^3.29.0",
